test/scc/expr/semantic-errors/134.t
void test()
{
    int a = { .x = 0 };
}